--- a/tribute.html
+++ b/tribute.html
@@ -26,7 +26,7 @@ degree wrong, and your goal is to be less
 wrong over time. <sub><i class="fa-solid fa-quote-right"></i></sub></pre>
         </div>
         <div class="quote-img">
-            <img src="images/Elon_Musk.png" alt="Elon Musk" width="500" height="400" />
+            <img src="images/Elon_Musk.png" alt="Elon Musk" width="400" height="300" />
         </div>
     </div>
     <div class="main">
@@ -42,7 +42,7 @@ wrong over time. <sub><i class="fa-solid fa-quote-right"></i></sub></pre>
                 Bloomberg and $235 billion according to Forbes.</p>
             <br>
             <hr>
-        </div><br><br><br><br>
+        </div><br><br class="breakers"><br class="breakers"><br class="breakers">
         <div class="books">
             <p>Books on Elon Musk</p>
             <hr><br>
@@ -53,7 +53,7 @@ wrong over time. <sub><i class="fa-solid fa-quote-right"></i></sub></pre>
                             target="_blank">
                             <img src="images/book1.jpg" alt="book1" width="195" height="300" /></a></li>
                     <div class="dd1c">
-                        Elon Musk: The Life, Lessons & Rules For Success
+                        <p>Elon Musk: The Life, Lessons & Rules For Success</p>
                     </div>
                 </div>
                 <div class="dd2">
@@ -62,7 +62,7 @@ wrong over time. <sub><i class="fa-solid fa-quote-right"></i></sub></pre>
                             target="_blank">
                             <img src="images/book2.jpg" alt="book2" width="195" height="300" /></a></li>
                     <div class="dd2c">
-                        Elon Musk(B) - Ashlee Vance
+                        <p>Elon Musk(B) - Ashlee Vance</p>
                     </div>
                 </div>
                 <div class="dd3">
@@ -71,7 +71,7 @@ wrong over time. <sub><i class="fa-solid fa-quote-right"></i></sub></pre>
                             target="_blank">
                             <img src="images/book3.jpg" alt="book3" width="195" height="300" /></a></li>
                     <div class="dd3c">
-                        Elon Musk: The Unauthorized Autobiography
+                        <p>Elon Musk: The Unauthorized Autobiography</p>
                     </div>
                 </div>
             </ul>
